Program - fix cropped end

--- a/assets/less/site.less
+++ b/assets/less/site.less
@@ -1239,6 +1239,7 @@ body.no-js .js-only {
     padding-left: 8.5rem;
     overflow-x: auto;
     overflow-y: hidden;
+    padding-bottom: 1rem;
 }
 
 .timerows-mobile {
